# backend/src/main.ts
@@ -1,5 +1,6 @@
 // backend/src/main.ts
 
+import { RequestMethod } from '@nestjs/common';
 import { NestFactory } from '@nestjs/core';
 
 import { AppModule } from './app.module';
@@ -10,7 +11,13 @@ import { AppValidationPipe } from './common/validation.pipe';
 async function bootstrap(): Promise<void> {
   const app = await NestFactory.create(AppModule);
 
-  app.setGlobalPrefix('api');
+  app.setGlobalPrefix('api', {
+    exclude: [
+      { path: 'auth/login', method: RequestMethod.GET },
+      { path: 'auth/callback', method: RequestMethod.GET },
+      { path: 'auth/logout', method: RequestMethod.POST },
+    ],
+  });
 
   app.useGlobalPipes(new AppValidationPipe());
   app.useGlobalFilters(new ExceptionFilter());
